--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "att"
 version = "0.1.0"
+authors = ["Javier Galarza <jegj57@gmail.com>"]
+description = "Another Time Tracker for simple tasks"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33.3"
