--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ anyhow = "1.0.41"
 thiserror = "1.0.25"
 humantime = "2.1.0"
 chrono = "0.4.7"
+serde_json = "1.0.64"
+serde = { version = "1.0.126", features = ["derive"] }
